# cfm

./: .gitignore  Cargo.toml  README.md  makefile
doc/: note.md
src/: debug.rs  fuzz.rs  main.rs
tests/hello/: Makefile
