[package]
name = "chinese_fuzzy_melon"
version = "0.1.0"
authors = ["Ofey Chan <ofey206@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
gdb = { path = '/home/ofey/CLionProjects/rust-gdb' }
regex = "1"
lazy_static = "1.4.0"
ctrlc = "3.1.7"
rand = "0.7.3"